Allow specifying custom styles.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "pcvis"
-version = "0.1.0"
-description = ""
+version = "0.2.0"
+description = "2022-12-01"
 authors = ["Yue Ni <niyue.com@gmail.com>"]
 readme = "README.md"
 
