--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "pcvis"
-version = "0.5.0"
-description = "2022-12-11"
+version = "0.5.1"
+description = "2022-12-12"
 authors = ["Yue Ni <niyue.com@gmail.com>"]
 readme = "README.md"
 
@@ -19,4 +19,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-pcvis = 'pcvis.pcvis:main'
+pcvis = 'pcvis.pcvis:cli'
